# docs/openapi.yaml
@@ -125,16 +125,6 @@ components:
           type: string
           description: The email of the user
           example: "john.doe@example.com"
-        createdAt:
-          type: string
-          format: date-time
-          description: User creation timestamp
-          example: "2024-01-01T00:00:00.000Z"
-        updatedAt:
-          type: string
-          format: date-time
-          description: User last update timestamp
-          example: "2024-01-01T00:00:00.000Z"
     AccessToken:
       type: object
       properties:
